shared/src/test/data/yeast/invalid-json/missing-last-mapentry-value.jyt
BeginDocument       0,  1,  0 ''
BeginSequence       0,  1,  0 '['
BeginMapping        1,  1,  1 '{'
BeginScalar         2,  1,  2 ''
Indicator           2,  1,  2 '\"'
Text                3,  1,  3 'code'
Indicator           7,  1,  7 '\"'
EndScalar           8,  1,  8 ''
Indicator           8,  1,  8 ':'
BeginScalar         9,  1,  9 ''
Indicator           9,  1,  9 '\"'
Text               10,  1, 10 'rree2000'
Indicator          18,  1, 18 '\"'
EndScalar          19,  1, 19 ''
Indicator          19,  1, 19 ','
BeginScalar        20,  1, 20 ''
Indicator          20,  1, 20 '\"'
Text               21,  1, 21 'origin'
Indicator          27,  1, 27 '\"'
EndScalar          28,  1, 28 ''
Indicator          28,  1, 28 ':'
BeginScalar        29,  1, 29 ''
Indicator          29,  1, 29 '\"'
Text               30,  1, 30 'MUA'
Indicator          33,  1, 33 '\"'
EndScalar          34,  1, 34 ''
Indicator          34,  1, 34 ','
BeginScalar        35,  1, 35 ''
Indicator          35,  1, 35 '\"'
Text               36,  1, 36 'emptySeats'
Indicator          46,  1, 46 '\"'
EndScalar          47,  1, 47 ''
Indicator          47,  1, 47 ':'
EndMapping         48,  1, 48 '}'
EndSequence        49,  1, 49 ']'